--- a/source/about.html.erb
+++ b/source/about.html.erb
@@ -8,12 +8,12 @@ title: "שולחן לשניים | אודות"
                    <div class="sidebar-img">
                        <img src="images/sidebar_about_img.png" alt=""  />
                    </div>
-                    <h2 class="title-blue">letraset sheets
-                        <span>lorem Ipsum has been the</span>
+                    <h2 class="title-blue">אנחנו במספרים
+                        <span>זה מה שאחנו עושים עם השקלים שנאספו עד כה</span>
                     </h2>
-                    <p>It is a long established </p>
+                    <p>עכשיו השתכנעתם? </p>
                     <div class="sidebar-btn">
-                        <input class="btn" type="submit" value="ipsum" />
+                        <input class="btn" type="submit" value="קליק אחד וזהו" />
                     </div>
                 </aside>
                 <div class="contant">
@@ -24,7 +24,7 @@ title: "שולחן לשניים | אודות"
                                     <img src="images/about_img_03.png" alt="name" />
                                 </figure>
                                 <figcaption class="about-info box-info">
-                                    <p>It is a long established fact that a reader will </p>
+                                    <p>מסייעים לכ-26,380 ילדים בישראל </p>
                                 </figcaption>
                             </div>
                         </li>
@@ -34,7 +34,7 @@ title: "שולחן לשניים | אודות"
                                     <img src="images/about_img_02.png" alt="name" />
                                 </figure>
                                 <figcaption class="about-info box-info">
-                                    <p>It is a long established fact that a reader will </p>
+                                    <p>מחלקים כ-1,600 ארגזי מזון ומעל 40,000 פריטים</p>
                                 </figcaption>
                             </div>
                         </li>
@@ -44,7 +44,7 @@ title: "שולחן לשניים | אודות"
                                     <img src="images/about_img_01.png" alt="name" />
                                 </figure>
                                 <figcaption class="about-info box-info">
-                                    <p>It is a long established fact that a reader will </p>
+                                    <p>תומכים בכ- 10,552 משפחות הסובלות מאי בטחון תזונתי </p>
                                 </figcaption>
                             </div>
                         </li>
@@ -54,7 +54,7 @@ title: "שולחן לשניים | אודות"
                                     <img src="images/about_img_05.png" alt="name" />
                                 </figure>
                                 <figcaption class="about-info box-info">
-                                    <p>It is a long established fact that a reader will </p>
+                                    <p>סיוע ותמיכה בפעילותם של 120 עמותות וארגוני מזון מקומיים</p>
                                 </figcaption>
                             </div>
                         </li>
@@ -64,7 +64,7 @@ title: "שולחן לשניים | אודות"
                                     <img src="images/about_img_06.png" alt="name" />
                                 </figure>
                                 <figcaption class="about-info box-info">
-                                    <p>It is a long established fact that a reader will </p>
+                                    <p>פועלים ב-97 ישובים בארץ</p>
                                 </figcaption>
                             </div>
                         </li>
@@ -74,7 +74,7 @@ title: "שולחן לשניים | אודות"
                                     <img src="images/about_img_04.png" alt="name" />
                                 </figure>
                                 <figcaption class="about-info box-info">
-                                    <p>It is a long established fact that a reader will </p>
+                                    <p>חיזוק המודעות הציבורית לבעית אי בטחון תזונתי</p>
                                 </figcaption>
                             </div>
                         </li>
