--- a/source/layouts/_footer.html.erb
+++ b/source/layouts/_footer.html.erb
@@ -17,21 +17,21 @@
                     <div class="row">
                         <div class="col-sm-6">
                             <h5 class="foot-subscrb-title clearfix">
-                                <span>Lorem Ipsum is simply dummy text</span>
+                                <span>עדיין יש לכם שאלות? טענות, מענות?</span>
                                 <img class="mobile-hidden" src="images/foot_middle_icon.png" alt="" />
 
                             </h5>
                             <form class="foot-subscrb" action="" method="">
                                 <div class="form-group">
-                                    <input class="form-control" type="email" placeholder="lorem ipsum"/>
+                                    <input class="form-control" type="email" placeholder="כתובת המייל שלך"/>
                                 </div>
-                                <input class="btn" type="submit" value="lorem"/>
+                                <input class="btn" type="submit" value="שלח"/>
 
                             </form>
                         </div>
                         <div class="col-sm-3 mobile-hidden">
                             <div class="foot-middle-nav">
-                                <h5>Lorem</h5>
+                                <h5>קישורים</h5>
                                 <ul>
                                     <li><a href="#">ipsum</a></li>
                                     <li><a href="#">passages</a></li>
