--- a/source/questions_and_answers.html.erb
+++ b/source/questions_and_answers.html.erb
@@ -8,12 +8,12 @@ title: "שולחן לשניים | שאלות ותשובות"
                    <div class="sidebar-img">
                        <img src="images/sidebar_q&a_img.png" alt=""  />
                    </div>
-                    <h2 class="title-blue">letraset sheets
-                        <span>lorem Ipsum has been the</span>
+                    <h2 class="title-blue">שאלות ותשובות...
+                        <!-- <span>lorem Ipsum has been the</span> -->
                     </h2>
-                    <p>It is a long established </p>
+                    <p>יש לך עוד שאלות?</p>
                     <div class="sidebar-btn">
-                        <input class="btn" type="submit" value="ipsum" />
+                        <input class="btn" type="submit" value="לחץ פה" />
                     </div>
                 </aside>
                 <div class="contant">
@@ -24,8 +24,8 @@ title: "שולחן לשניים | שאלות ותשובות"
                                     <img src="images/q&a_01.png" alt="name" />
                                 </figure>
                                 <figcaption class="box-info">
-                                    <h3>lorem ipsum dolor</h3>
-                                    <p>It is a long established fact that a reader will </p>
+                                    <h3>מתי כדאי להרשם וכמה זמן זה יקח?</h3>
+                                    <p>עכשיו, 30 שניות. </p>
                                 </figcaption>
                             </div>
                         </li>
@@ -35,8 +35,8 @@ title: "שולחן לשניים | שאלות ותשובות"
                                     <img src="images/q&a_02.png" alt="name" />
                                 </figure>
                                 <figcaption class="box-info">
-                                    <h3>lorem ipsum dolor</h3>
-                                    <p>It is a long established fact that a reader will </p>
+                                    <h3>מתי אפשר להפסיק וכמה זמן זה לוקח?</h3>
+                                    <p>כל רגע, 15 שניות. </p>
                                 </figcaption>
                             </div>
                         </li>
@@ -46,8 +46,8 @@ title: "שולחן לשניים | שאלות ותשובות"
                                     <img src="images/q&a_03.png" alt="name" />
                                 </figure>
                                 <figcaption class="box-info">
-                                    <h3>lorem ipsum dolor</h3>
-                                    <p>It is a long established fact that a reader will </p>
+                                    <h3>מהו חוסר ביטחון תזונתי?</h3>
+                                    <p>בגדול, זה כשאנשים נאלצים לדלג על ארוחות, ולא מטעמי דיאטה.</p>
                                 </figcaption>
                             </div>
                         </li>
@@ -57,8 +57,8 @@ title: "שולחן לשניים | שאלות ותשובות"
                                     <img src="images/q&a_04.png" alt="name" />
                                 </figure>
                                 <figcaption class="box-info">
-                                    <h3>lorem ipsum dolor</h3>
-                                    <p>It is a long established fact that a reader will </p>
+                                    <h3>איך זה יראה בחשבון הבנק שלי?</h3>
+                                    <p>כמו בדוגמא למעלה.</p>
                                 </figcaption>
                             </div>
                         </li>
@@ -68,8 +68,8 @@ title: "שולחן לשניים | שאלות ותשובות"
                                     <img src="images/q&a_05.png" alt="name" />
                                 </figure>
                                 <figcaption class="box-info">
-                                    <h3>lorem ipsum dolor</h3>
-                                    <p>It is a long established fact that a reader will </p>
+                                    <h3>האם סכום התרומה יכול להשתנות?</h3>
+                                    <p>לא, אין מצב.</p>
                                 </figcaption>
                             </div>
                         </li>
@@ -79,8 +79,8 @@ title: "שולחן לשניים | שאלות ותשובות"
                                     <img src="images/q&a_06.png" alt="name" />
                                 </figure>
                                 <figcaption class="box-info">
-                                    <h3>lorem ipsum dolor</h3>
-                                    <p>It is a long established fact that a reader will </p>
+                                    <h3>למי תעבירו את המידע שלי וכמה פעמים תתקשרו לבקש עוד תרומות?</h3>
+                                    <p>לאף אחד ואף פעם.</p>
                                 </figcaption>
                             </div>
                         </li>
@@ -90,8 +90,8 @@ title: "שולחן לשניים | שאלות ותשובות"
                                     <img src="images/q&a_07.png" alt="name" />
                                 </figure>
                                 <figcaption class="box-info">
-                                    <h3>lorem ipsum dolor</h3>
-                                    <p>It is a long established fact that a reader will </p>
+                                    <h3>אז כמה כסף אתם רוצים?</h3>
+                                    <p>בכל פעם שאתה אוכל, אנחנו עוזרים לך לתרום שקל אחד לילד שזקוק לו.</p>
                                 </figcaption>
                             </div>
                         </li>
@@ -101,8 +101,8 @@ title: "שולחן לשניים | שאלות ותשובות"
                                     <img src="images/q&a_08.png" alt="name" />
                                 </figure>
                                 <figcaption class="box-info">
-                                    <h3>lorem ipsum dolor</h3>
-                                    <p>It is a long established fact that a reader will </p>
+                                    <h3>לאן הולך הכסף שנאסף?</h3>
+                                    <p>לילדים שהכי צריכים את זה.</p>
                                 </figcaption>
                             </div>
                         </li>
@@ -112,8 +112,8 @@ title: "שולחן לשניים | שאלות ותשובות"
                                     <img src="images/q&a_09.png" alt="name" />
                                 </figure>
                                 <figcaption class="box-info">
-                                    <h3>lorem ipsum dolor</h3>
-                                    <p>It is a long established fact that a reader will </p>
+                                    <h3>האם כל הכסף ילך לתרומה? </h3>
+                                    <p>כן. הכסף במלואו עובר ישירות לארגון לתת. כשמדובר במצווה, אין מקום לרווח או לעמלות.</p>
                                 </figcaption>
                             </div>
                         </li>
@@ -123,8 +123,8 @@ title: "שולחן לשניים | שאלות ותשובות"
                                     <img src="images/q&a_10.png" alt="name" />
                                 </figure>
                                 <figcaption class="box-info">
-                                    <h3>lorem ipsum dolor</h3>
-                                    <p>It is a long established fact that a reader will </p>
+                                    <h3>מאיפה ירד הכסף?</h3>
+                                    <p>רק דרך כרטיס האשראי. אין אפשרות לחייב את הסכום דרך כרטיס ה״תן ביס״. לכן, בעת הצטרפות, יש צורך לקשר את כרטיס ה״תן ביס״ לכרטיס האשראי.</p>
                                 </figcaption>
                             </div>
                         </li>
@@ -134,8 +134,8 @@ title: "שולחן לשניים | שאלות ותשובות"
                                     <img src="images/q&a_11.png" alt="name" />
                                 </figure>
                                 <figcaption class="box-info">
-                                    <h3>lorem ipsum dolor</h3>
-                                    <p>It is a long established fact that a reader will </p>
+                                    <h3>ואם אני רוצה לדעת עוד?</h3>
+                                    <p>נשמח לתת לך מידע נוסף בכתובת המייל shulchan4two@gmail.com ובאתר www.latet.org.il</p>
                                 </figcaption>
                             </div>
                         </li>
