--- a/source/ambassadors.html.erb
+++ b/source/ambassadors.html.erb
@@ -8,25 +8,25 @@ title: "שולחן לשניים | השגרירים שלנו"
                    <div class="sidebar-img">
                        <img src="images/sidebar_ambassadors_img.png" alt=""  />
                    </div>
-                    <h2 class="title-blue">letraset sheets containing</h2>
+                    <h2 class="title-blue">בואו להיות שגרירים לשתף ולעזור</h2>
                     <form class="sidebar-form" action="" method="">
                         <div class="form-group">
-                            <input class="form-control" type="text" placeholder="lorem ipsum" />
+                            <input class="form-control" type="text" placeholder="שם החברה" />
                         </div>
                         <div class="form-group">
-                            <input class="form-control" type="text" placeholder="simply dummy" />
+                            <input class="form-control" type="text" placeholder="כתובת המייל שלך" />
                         </div>
                         <div class="form-group">
-                            <input class="form-control" type="text" placeholder="typesetting" />
+                            <input class="form-control" type="text" placeholder="מספר טלפון" />
                         </div>
                         <div class="sidebar-btn">
-                            <input class="btn" type="submit" value="ipsum" />
+                            <input class="btn" type="submit" value="קליק אחד וזהו" />
                         </div>
                     </form>
                     <div class="sidebar-social">
                         <a href="#" target="_blank">
                             <i class="icon icon-fb"></i>
-                            <span>fasebook</span>
+                            <span> שתף בפייסבוק </span>
                         </a>
                     </div>
                 </aside>
@@ -38,7 +38,7 @@ title: "שולחן לשניים | השגרירים שלנו"
                                     <img src="images/ambassador_01.png" alt="name" />
                                 </figure>
                                 <figcaption class="ambassador-info">
-                                    <h3>Lorem Ipsum</h3>
+                                    <h3>1</h3>
                                     <h4>Lorem Ipsum has been the industry's</h4>
                                     <p>It is a long established fact that a reader will be distracted by the readable content of a page </p>
                                 </figcaption>
