--- a/source/contact-us.html.erb
+++ b/source/contact-us.html.erb
@@ -4,6 +4,6 @@ title: "שולחן לשניים | צור קשר"
 
 <section class="main">
   <div class="container-main clearfix">
-    <h2>Contact Us</h2>
+    <!-- <h2>Contact Us</h2> -->
   </div>
 </section>
