--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -3,8 +3,8 @@
             <!-- banner -->
             <div class="banner section-blue">
                 <div class="container-small">
-                    <h2><span>Lorem</span> Ipsum is simply <br>dummy text of the printing</h2>
-                    <a href="#" class="btn">lorem ipsum</a>
+                    <h2> בכל הזמנת ארוחה עם <span>תן ביס</span><br>תורמים שקל לילד שזקוק לארוחה</h2>
+                    <a href="#" class="btn">הצטרף עכשעיו</a>
                     <div class="banner-media">
                         <div class="banner-media-inner">
                             <button type="button" class="btn-reset btn-play" data-toggle="modal" data-target="#video-modal"><i class="icon icon-play"></i></button>
@@ -17,7 +17,7 @@
             <!-- options -->
             <div class="options">
                 <div class="container-small section-space">
-                    <h3 class="title-blue fly-in animated-content">Lorem Ipsum is simply</h3>
+                    <h3 class="title-blue fly-in animated-content">אז מה בעצם אנחנו עושים?</h3>
                     <ul class="row fly-in animated-content">
                         <li class="col-sm-4">
                             <div class="col-box">
@@ -25,8 +25,8 @@
                                     <img src="images/img_01.png" alt="" />
                                 </figure>
                                 <figcaption class="option-caption">
-                                    <h4>It has survived not only</h4>
-                                    <p> Lorem Ipsum passages <br> and more recently</p>
+                                    <h4>1. מצטרפים לשולחן לשניים</h4>
+                                    <p> זה לוקח כמה שניות ותמיד אפשר  <br>להתחרט ולבטל</p>
                                 </figcaption>
                             </div>
                         </li>
@@ -36,8 +36,8 @@
                                     <img src="images/img_02.png" alt="" />
                                 </figure>
                                 <figcaption class="option-caption">
-                                    <h4>It has survived not only</h4>
-                                    <p> Lorem Ipsum passages <br> and more recently</p>
+                                    <h4>2. תורמים שקל אחד</h4>
+                                    <p> בכל הזמנת ארוחה עם תן ביס. <br> שקל אחד. בלבד.</p>
                                 </figcaption>
                             </div>
                         </li>
@@ -47,8 +47,8 @@
                                     <img src="images/img_03.png" alt="" />
                                 </figure>
                                 <figcaption class="option-caption">
-                                    <h4>It has survived not only</h4>
-                                    <p> Lorem Ipsum passages <br> and more recently</p>
+                                    <h4>3. עוזרים לילדים שזקוקים לארוחה.</h4>
+                                    <p> הכסף במלואו הולך ישירות <br> לילדים שזקוקים לו.</p>
                                 </figcaption>
                             </div>
                         </li>
@@ -60,8 +60,8 @@
             <!-- section-separator -->
             <div class="section-separator section-blue fly-in animated-content">
                 <div class="container-small">
-                    <p>The standard chunk of Lorem Ipsum</p>
-                    <a href="#" class="btn">lorem</a>
+                    <p>נכון שזה למטרה טובה?..</p>
+                    <a href="#" class="btn">קליק אחד וזהו</a>
                 </div>
             </div>
             <!-- /section-separator -->
@@ -69,7 +69,7 @@
             <!-- participants-section -->
             <div class="participants-section">
                 <div class="container-small section-space">
-                    <h3 class="title-blue fly-in animated-content">Lorem Ipsum is simply</h3>
+                    <h3 class="title-blue fly-in animated-content">המשתתפים שלני מספרים...</h3>
                     <div class="participant-block fly-in animated-content">
                         <div class="row">
                             <div class="col-sm-2 mobile-hidden">
@@ -80,9 +80,8 @@
                             <div class="col-sm-10 col-xs-12">
                                 <div class="participant-info-inner-right participant-info">
                                     <div class="participant-info-inner">
-                                        <h4>Lorem ipsum dolor sit amet <span>consectetur adipiscing</span></h4>
-                                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nec ornare ligula. Duis orci metus, sollicitudin vel ante non, venenatis
-                                            finibus purus. Aenean eget placerat tellus, non consectetur lacus.Sed euismod maximus diam, at tempus lorem auctor in. </p>
+                                        <h4>שם <span>תפקיד</span></h4>
+                                        <p>Lorem ipsum </p>
                                     </div>
                                 </div>
                             </div>
@@ -93,9 +92,8 @@
                             <div class="col-sm-10 col-xs-12">
                                 <div class="participant-info-inner-left participant-info">
                                     <div class="participant-info-inner">
-                                        <h4>Lorem ipsum dolor sit amet <span>consectetur adipiscing</span></h4>
-                                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nec ornare ligula. Duis orci metus, sollicitudin vel ante non, venenatis
-                                            finibus purus. Aenean eget placerat tellus, non consectetur lacus.Sed euismod maximus diam, at tempus lorem auctor in. </p>
+                                      <h4>שם <span>תפקיד</span></h4>
+                                      <p>Lorem ipsum </p>
                                     </div>
                                 </div>
                             </div>
@@ -116,9 +114,8 @@
                             <div class="col-sm-10 col-xs-12">
                                 <div class="participant-info-inner-right participant-info">
                                     <div class="participant-info-inner">
-                                        <h4>Lorem ipsum dolor sit amet <span>consectetur adipiscing</span></h4>
-                                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nec ornare ligula. Duis orci metus, sollicitudin vel ante non, venenatis
-                                            finibus purus. Aenean eget placerat tellus, non consectetur lacus.Sed euismod maximus diam, at tempus lorem auctor in. </p>
+                                      <h4>שם <span>תפקיד</span></h4>
+                                      <p>Lorem ipsum </p>
                                     </div>
                                 </div>
                             </div>
@@ -131,8 +128,8 @@
             <!-- section-separator -->
             <div class="section-separator section-blue fly-in animated-content">
                 <div class="container-small">
-                    <p>The standard chunk of Lorem Ipsum</p>
-                    <a href="#" class="btn">lorem</a>
+                    <p>עכשיו כבר בטוח השתכנעתם!</p>
+                    <a href="#" class="btn">יאללה תקליקו</a>
                 </div>
             </div>
             <!-- /section-separator -->
@@ -140,7 +137,7 @@
             <!-- logos -->
             <div class="logos">
                 <div class="container-small section-space">
-                    <h3 class="title-blue fly-in animated-content">Lorem Ipsum is simply</h3>
+                    <h3 class="title-blue fly-in animated-content">החברות שכבר איתנו..</h3>
                     <div class="logos-block fly-in animated-content">
                         <ul class="row">
                             <li class="col-sm-4">
