--- a/source/layouts/_header.html.erb
+++ b/source/layouts/_header.html.erb
@@ -2,7 +2,7 @@
         <header class="header">
             <div class="header-inner clearfix">
                 <div class="head-left mobile-hidden">
-                    <a href="#" class="head-link"><strong><i class="icon icon-triangle-down"></i> ipsum</strong> lorem</a>
+                    <a href="#" class="head-link"><strong><i class="icon icon-triangle-down">שם</i> </strong> שלום </a>
                 </div>
                 <div class="head-right clearfix">
                     <button class="menu-toggle mobile-visiable btn-reset"><i class="icon icon-menu"></i></button>
@@ -13,10 +13,10 @@
                     </h1>
                     <nav class="head-nav mobile-hidden">
                         <ul class="clearfix">
-                            <li><a href="/contact-us.html">contact us</a></li>
-                            <li><a href="/about.html">about us</a></li>
-                            <li><a href="/ambassadors.html">ambassadors</a></li>
-                            <li><a href="/questions_and_answers.html">Q&A</a></li>
+                            <li><a href="/contact-us.html">צור קשר</a></li>
+                            <li><a href="/about.html">אנחנו במספרים</a></li>
+                            <li><a href="/ambassadors.html">השגרירים שלנו</a></li>
+                            <li><a href="/questions_and_answers.html">שאלות ותשובות</a></li>
                         </ul>
                     </nav>
                 </div>
