--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -4,7 +4,7 @@
             <div class="banner section-blue">
                 <div class="container-small">
                     <h2> בכל הזמנת ארוחה עם <span>תן ביס</span><br>תורמים שקל לילד שזקוק לארוחה</h2>
-                    <a href="#" class="btn">הצטרף עכשעיו</a>
+                    <a href="#" class="btn">הצטרף עכשיו</a>
                     <div class="banner-media">
                         <div class="banner-media-inner">
                             <button type="button" class="btn-reset btn-play" data-toggle="modal" data-target="#video-modal"><i class="icon icon-play"></i></button>
@@ -69,7 +69,7 @@
             <!-- participants-section -->
             <div class="participants-section">
                 <div class="container-small section-space">
-                    <h3 class="title-blue fly-in animated-content">המשתתפים שלני מספרים...</h3>
+                    <h3 class="title-blue fly-in animated-content">המשתתפים שלנו מספרים...</h3>
                     <div class="participant-block fly-in animated-content">
                         <div class="row">
                             <div class="col-sm-2 mobile-hidden">
@@ -142,21 +142,21 @@
                         <ul class="row">
                             <li class="col-sm-4">
                                 <div class="logo-box">
-                                    <a href="#" target="_blank">
+                                    <a href="http://www.steimatzky.co.il/Steimatzky/pages/default.aspx" target="_blank">
                                         <img src="images/logo_11.png" alt="logo_01" />
                                     </a>
                                 </div>
                             </li>
                             <li class="col-sm-4">
                                 <div class="logo-box">
-                                    <a href="#" target="_blank">
+                                    <a href="https://www.elite.co.il/" target="_blank">
                                         <img src="images/logo_12.png" alt="logo_01" />
                                     </a>
                                 </div>
                             </li>
                             <li class="col-sm-4">
                                 <div class="logo-box">
-                                    <a href="#" target="_blank">
+                                    <a href="https://www.tnuva.co.il/" target="_blank">
                                         <img src="images/logo_13.png" alt="logo_01" />
                                     </a>
                                 </div>
@@ -166,70 +166,70 @@
                     <ul class="logos-small-block fly-in animated-content">
                         <li>
                             <div class="logo-small-box">
-                                <a href="#" target="_blank">
+                                <a href="https://www.cellcom.co.il/" target="_blank">
                                     <img src="images/logo_10.png" alt="logo" />
                                 </a>
                             </div>
                         </li>
                         <li>
                             <div class="logo-small-box">
-                                <a href="#" target="_blank">
+                                <a href="http://www.mako.co.il/" target="_blank">
                                     <img src="images/logo_09.png" alt="logo" />
                                 </a>
                             </div>
                         </li>
                         <li>
                             <div class="logo-small-box">
-                                <a href="#" target="_blank">
+                                <a href="http://www.tapuz.co.il/minisites/102fm/" target="_blank">
                                     <img src="images/logo_08.png" alt="logo" />
                                 </a>
                             </div>
                         </li>
                         <li>
                             <div class="logo-small-box">
-                                <a href="#" target="_blank">
+                                <a href="https://www.bank-yahav.co.il/" target="_blank">
                                     <img src="images/logo_07.png" alt="logo" />
                                 </a>
                             </div>
                         </li>
                         <li>
                             <div class="logo-small-box">
-                                <a href="#" target="_blank">
+                                <a href="http://www.negev-new.co.il/" target="_blank">
                                     <img src="images/logo_06.png" alt="logo" />
                                 </a>
                             </div>
                         </li>
                         <li>
                             <div class="logo-small-box">
-                                <a href="#" target="_blank">
+                                <a href="http://www.burgus.co.il/" target="_blank">
                                     <img src="images/logo_05.png" alt="logo" />
                                 </a>
                             </div>
                         </li>
                         <li>
                             <div class="logo-small-box">
-                                <a href="#" target="_blank">
+                                <a href="http://www.strauss-group.co.il/" target="_blank">
                                     <img src="images/logo_04.png" alt="logo" />
                                 </a>
                             </div>
                         </li>
                         <li>
                             <div class="logo-small-box">
-                                <a href="#" target="_blank">
+                                <a href="http://www.neviot.co.il/" target="_blank">
                                     <img src="images/logo_03.png" alt="logo" />
                                 </a>
                             </div>
                         </li>
                         <li>
                             <div class="logo-small-box">
-                                <a href="#" target="_blank">
+                                <a href="https://www.cal-online.co.il/he-IL/Cal/Pages/home.aspx" target="_blank">
                                     <img src="images/logo_02.png" alt="logo" />
                                 </a>
                             </div>
                         </li>
                         <li>
                             <div class="logo-small-box">
-                                <a href="#" target="_blank">
+                                <a href="http://www.azrieli.com/" target="_blank">
                                     <img src="images/logo_01.png" alt="logo" />
                                 </a>
                             </div>
