--- a/source/layouts/_header.html.erb
+++ b/source/layouts/_header.html.erb
@@ -1,13 +1,10 @@
 <!-- header -->
         <header class="header">
             <div class="header-inner clearfix">
-                <div class="head-left mobile-hidden">
-                    <a href="#" class="head-link"><strong><i class="icon icon-triangle-down">שם</i> </strong> שלום </a>
-                </div>
                 <div class="head-right clearfix">
                     <button class="menu-toggle mobile-visiable btn-reset"><i class="icon icon-menu"></i></button>
                     <h1 class="head-logo">
-                        <a href="#">
+                        <a href="/index.html">
                             <img src="images/head-logo.png" alt="logo name" />
                         </a>
                     </h1>
