--- a/source/layouts/_footer.html.erb
+++ b/source/layouts/_footer.html.erb
@@ -8,7 +8,7 @@
                         </a>
                     </div>
                     <div class="foot-top-link">
-                        <a href="#">www.latet.org.il</a>
+                        <a href="http://www.latet.org.il/" target="_blank">www.latet.org.il</a>
                     </div>
                 </div>
             </div>
@@ -33,12 +33,10 @@
                             <div class="foot-middle-nav">
                                 <h5>קישורים</h5>
                                 <ul>
-                                    <li><a href="#">ipsum</a></li>
-                                    <li><a href="#">passages</a></li>
-                                    <li><a href="#">recently</a></li>
-                                    <li><a href="#">desktop</a></li>
-                                    <li><a href="#">publishing</a></li>
-                                    <li><a href="#">lorem</a></li>
+                                    <li><a href="/questions_and_answers.html">שאלות ותשובות</a></li>
+                                    <li><a href="/ambassadors.html">השגרירים שלנו</a></li>
+                                    <li><a href="/about.html">אנחנו במספרים</a></li>
+                                    <li><a href="/contact-us.html">צור קשר</a></li>
                                 </ul>
                             </div>
                         </div>
