--- a/source/about.html.erb
+++ b/source/about.html.erb
@@ -9,7 +9,7 @@ title: "שולחן לשניים | אודות"
                        <img src="images/sidebar_about_img.png" alt=""  />
                    </div>
                     <h2 class="title-blue">אנחנו במספרים
-                        <span>זה מה שאחנו עושים עם השקלים שנאספו עד כה</span>
+                        <span>זה מה שאחנו עושים עם<br> השקלים שנאספו עד כה</span>
                     </h2>
                     <p>עכשיו השתכנעתם? </p>
                     <div class="sidebar-btn">
