--- a/source/layouts/_footer.html.erb
+++ b/source/layouts/_footer.html.erb
@@ -36,7 +36,7 @@
                                     <li><a href="/questions_and_answers.html">שאלות ותשובות</a></li>
                                     <li><a href="/ambassadors.html">השגרירים שלנו</a></li>
                                     <li><a href="/about.html">אנחנו במספרים</a></li>
-                                    <li><a href="/contact-us.html">צור קשר</a></li>
+                                    <li><a href="/contacts.html">צור קשר</a></li>
                                 </ul>
                             </div>
                         </div>
