--- a/source/layouts/_header.html.erb
+++ b/source/layouts/_header.html.erb
@@ -10,13 +10,24 @@
                     </h1>
                     <nav class="head-nav mobile-hidden">
                         <ul class="clearfix">
-                            <li><a href="/contact-us.html">צור קשר</a></li>
+                            <li><a href="/contacts.html">צור קשר</a></li>
                             <li><a href="/about.html">אנחנו במספרים</a></li>
                             <li><a href="/ambassadors.html">השגרירים שלנו</a></li>
                             <li><a href="/questions_and_answers.html">שאלות ותשובות</a></li>
                         </ul>
                     </nav>
                 </div>
+                <!-- mobile-nav -->
+                <nav class="mobile-nav mobile-visiable">
+                    <button id="menu-close" class="menu-toggle mobile-visiable btn-reset"><i class="icon icon-close"></i></button>
+                    <ul>
+                        <li><a href="/contactus.html">צור קשר</a></li>
+                        <li><a href="/about.html">אנחנו במספרים</a></li>
+                        <li><a href="/ambassadors.html">השגרירים שלנו</a></li>
+                        <li><a href="/questions_and_answers.html">שאלות ותשובות</a></li>
+                    </ul>
+                </nav>
+                <!-- /mobile-nav -->
             </div>
         </header>
         <!-- /header -->
