update mobile menu

--- a/source/layouts/layout.html.erb
+++ b/source/layouts/layout.html.erb
@@ -28,6 +28,18 @@
         <%= partial "layouts/footer" %>
         <div class="wrapper-mask"></div>
       </div>
+      <!-- mobile-nav -->
+      <nav class="mobile-nav mobile-visiable">
+        <button id="menu-close" class="menu-toggle mobile-visiable btn-reset"><i class="icon icon-close"></i></button>
+        <ul>
+          <li><a href="contactus.html">צור קשר</a></li>
+          <li><a href="about.html">אנחנו במספרים</a></li>
+          <li><a href="ambassadors.html">השגרירים שלנו</a></li>
+          <li><a href="q&a.html">שאלות ותשובות</a></li>
+        </ul>
+      </nav>
+  <!-- /mobile-nav -->
+
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
