--- a/source/ambassadors.html.erb
+++ b/source/ambassadors.html.erb
@@ -38,9 +38,11 @@ title: "שולחן לשניים | השגרירים שלנו"
               <img src="images/ambassador_01.png" alt="name" />
             </figure>
             <figcaption class="ambassador-info">
-            <h3>1</h3>
-            <h4>Lorem Ipsum has been the industry's</h4>
-            <p>It is a long established fact that a reader will be distracted by the readable content of a page </p>
+            <h3>נטלי בן דוד</h3>
+            <h4>מהנדסת בדיקות מערכת וביצועים, חברת F5</h4>
+            <p>"בעיניי להיות שגרירה זה קודם כל להוות דוגמא אישית: להראות לאנשים שאפשר וצריך לתרום לאלו ששפר מזלם - במיוחד אם אלו ילדים.
+התוכנית היא מעולה בגלל שקל להצטרף, לא צריך להתאמץ הרבה והתוצאה עצמה היא ענקית ומשנה חיים.
+אני מקווה שאנשים ישכילו להבין את זה ויצטרפו בהמוניהם"</p>
             </figcaption>
           </div>
         </li>
@@ -50,9 +52,10 @@ title: "שולחן לשניים | השגרירים שלנו"
               <img src="images/ambassador_02.png" alt="name" />
             </figure>
             <figcaption class="ambassador-info">
-            <h3>Lorem Ipsum</h3>
-            <h4>Lorem Ipsum has been the industry's</h4>
-            <p>It is a long established fact that a reader will be distracted of a page when looking at its layout. </p>
+            <h3>יובל קשטכר</h3>
+            <h4>עובד של unilink חברת השמה להיי טק</h4>
+            <p>"נפלה בחלקי הזכות לקחת חלק בפרויקט המגניב הזה.
+קל מאוד להתלונן על כמה נורא המצב בארץ, יש להבין ששינוי החברתי מתחיל בנו, מלמטה." </p>
             </figcaption>
           </div>
         </li>
@@ -62,45 +65,9 @@ title: "שולחן לשניים | השגרירים שלנו"
               <img src="images/ambassador_03.png" alt="name" />
             </figure>
             <figcaption class="ambassador-info">
-            <h3>Lorem Ipsum</h3>
-            <h4>Lorem Ipsum has been the industry's</h4>
-            <p>It is a long established fact that a  readable content of a page when looking at its layout. </p>
-            </figcaption>
-          </div>
-        </li>
-        <li class="col-lg-4 col-md-6 fly-in animated-content">
-          <div class="ambassador-box">
-            <figure class="ambassador-img">
-              <img src="images/ambassador_04.png" alt="name" />
-            </figure>
-            <figcaption class="ambassador-info">
-            <h3>Lorem Ipsum</h3>
-            <h4>Lorem Ipsum has been the industry's</h4>
-            <p>It is a long established readable content of a page when looking at  </p>
-            </figcaption>
-          </div>
-        </li>
-        <li class="col-lg-4 col-md-6 fly-in animated-content">
-          <div class="ambassador-box">
-            <figure class="ambassador-img">
-              <img src="images/ambassador_05.png" alt="name" />
-            </figure>
-            <figcaption class="ambassador-info">
-            <h3>Lorem Ipsum</h3>
-            <h4>Lorem Ipsum has been the industry's</h4>
-            <p>It is a long established fact that a reader will be distracted content of a page when looking at its layout. </p>
-            </figcaption>
-          </div>
-        </li>
-        <li class="col-lg-4 col-md-6 fly-in animated-content">
-          <div class="ambassador-box">
-            <figure class="ambassador-img">
-              <img src="images/ambassador_06.png" alt="name" />
-            </figure>
-            <figcaption class="ambassador-info">
-            <h3>Lorem Ipsum</h3>
-            <h4>Lorem Ipsum has been the industry's</h4>
-            <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. </p>
+              <h3>ענבל גילאי</h3>
+              <h4> מפתחת תוכנה בחברת קלרנה</h4>
+              <p>" הצטרפתי לפרוייקט כי זו דרך קלה ונחמדה לעשות משהו טוב. אהבתי את הרעיון של ״בכל פעם שאתה אוכל, עזור למישהו לאכול איתך״</p>
             </figcaption>
           </div>
         </li>
