--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -80,14 +80,14 @@
           <div class="col-sm-10 col-xs-12">
             <div class="participant-info-inner-right participant-info">
               <div class="participant-info-inner">
-                <h4>שם <span>תפקיד</span></h4>
-                <p>Lorem ipsum </p>
+                <h4>רון גורה <span> - יזם</span></h4>
+                <p>"שולחן לשניים זו הדרך הכי כיפית וטעימה לתרום, אני יודע שכל פעם שאני אוכל או מזמין אוכל מישהו אוכל איתי יחד. השקל הבודד הזה מתורגם למנה עבור ילד שצריך אותה. פתאום הארוחות צהריים שלי הרבה יותר טעימות!״.  </p>
               </div>
             </div>
           </div>
         </div>
       </div>
-      <div class="participant-block fly-in animated-content">
+      <!-- <div class="participant-block fly-in animated-content">
         <div class="row">
           <div class="col-sm-10 col-xs-12">
             <div class="participant-info-inner-left participant-info">
@@ -120,7 +120,7 @@
             </div>
           </div>
         </div>
-      </div>
+      </div> -->
     </div>
   </div>
   <!-- /participants -->
