--- a/source/stylesheets/ambasadors.css.scss
+++ b/source/stylesheets/ambasadors.css.scss
@@ -44,7 +44,7 @@
   padding: 40px 20px 20px 20px;
   font-size: 20px;
   line-height: 24px;
-  height: 300px;
+  //height: 300px;
   overflow: hidden;
   h3, h4 {
     text-align: center;
