mobile menu and video size

--- a/source/stylesheets/home.css.scss
+++ b/source/stylesheets/home.css.scss
@@ -109,6 +109,11 @@
     font-size: 20px;
     margin-bottom: 10px;
   }
+  #iframe{
+    overflow:hidden;
+    height:100%;
+    width:100%;
+  }
 }
 
 /* Section Separator */
