--- a/source/layouts/_header.html.erb
+++ b/source/layouts/_header.html.erb
@@ -2,7 +2,7 @@
 <header class="header">
   <div class="header-inner clearfix">
     <div class="head-right clearfix">
-      <button class="menu-toggle mobile-visiable btn-reset"><i class="icon icon-menu"></i></button>
+      <button id="menu-open" class="menu-toggle mobile-visiable btn-reset"><i class="icon icon-menu"></i></button>
       <h1 class="head-logo">
         <a href="/index.html">
           <img src="images/head-logo.png" alt="logo name" />
