--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -244,7 +244,7 @@
 <div class="modal fade" id="video-modal" role="dialog">
   <div class="modal-dialog">
     <div class="modal-content">
-      <iframe id="iframe" width="560" height="315" src="https://www.youtube.com/embed/HieorPee6KM?autoplay=1" frameborder="0" allowfullscreen></iframe>
+      <iframe id="iframe" width="560" height="315" src="https://www.youtube.com/embed/HieorPee6KM" frameborder="0" allowfullscreen></iframe>
     </div>
   </div>
 </div>
