--- a/source/layouts/_footer.html.erb
+++ b/source/layouts/_footer.html.erb
@@ -3,12 +3,9 @@
   <div class="foot-top">
     <div class="container-small">
       <div class="foot-top-logo">
-        <a href="#">
-          <img src="images/foot_top_logo.png" alt="logo" />
+        <a href="http://www.latet.org.il/" target="_blank">
+          <img src="images/latet.png" alt="logo" />
         </a>
-      </div>
-      <div class="foot-top-link">
-        <a href="http://www.latet.org.il/" target="_blank">www.latet.org.il</a>
       </div>
     </div>
   </div>
