CTA btns centered

--- a/source/about.html.erb
+++ b/source/about.html.erb
@@ -12,7 +12,7 @@ title: "שולחן לשניים | אודות"
         <span>זה מה שאחנו עושים עם<br> השקלים שנאספו עד כה</span>
       </h2>
       <p>עכשיו השתכנעתם? </p>
-      <div class="sidebar-btn">
+      <div class="sidebar-btn text-center">
         <input class="btn" type="submit" value="קליק אחד וזהו" />
       </div>
     </aside>
