--- a/source/ambassadors.html.erb
+++ b/source/ambassadors.html.erb
@@ -19,7 +19,7 @@ title: "שולחן לשניים | השגרירים שלנו"
         <div class="form-group">
           <input class="form-control" type="text" placeholder="מספר טלפון" />
         </div>
-        <div class="sidebar-btn">
+        <div class="sidebar-btn text-center">
           <input class="btn" type="submit" value="קליק אחד וזהו" />
         </div>
       </form>
