--- a/source/questions_and_answers.html.erb
+++ b/source/questions_and_answers.html.erb
@@ -12,7 +12,7 @@ title: "שולחן לשניים | שאלות ותשובות"
         <!-- <span>lorem Ipsum has been the</span> -->
       </h2>
       <p>יש לך עוד שאלות?</p>
-      <div class="sidebar-btn">
+      <div class="sidebar-btn text-center">
         <input class="btn" type="submit" value="לחץ פה" />
       </div>
     </aside>
