FAQ CTA leads to contact us

--- a/source/questions_and_answers.html.erb
+++ b/source/questions_and_answers.html.erb
@@ -12,8 +12,8 @@ title: "שולחן לשניים | שאלות ותשובות"
         <!-- <span>lorem Ipsum has been the</span> -->
       </h2>
       <p>יש לך עוד שאלות?</p>
-      <div class="sidebar-btn text-center">
-        <input class="btn" type="submit" value="לחץ פה" />
+      <div class="sidebar-btn text-center" >
+        <a class="btn" type="submit"  href="/contacts.html">לחץ פה</a>
       </div>
     </aside>
     <div class="contant">
@@ -109,7 +109,7 @@ title: "שולחן לשניים | שאלות ותשובות"
         <li class="col-lg-4 col-md-6 fly-in animated-content">
           <div class="box">
             <figure class="box-img">
-              <img src="images/q&a_09.png" alt="name" />
+              <img src="images/q&a_09.png" alt="name"/>
             </figure>
             <figcaption class="box-info">
             <h3>האם כל הכסף ילך לתרומה? </h3>
