contact form updated

--- a/source/contacts.html.erb
+++ b/source/contacts.html.erb
@@ -22,14 +22,9 @@ title: "שולחן לשניים | צור קשר"
             <h3>צור איתנו קשר</h3>
             <form class="page-form" action="" method="">
               <div class="form-group">
-                <input class="form-control" type="text" placeholder="שם חברה" required/>
-              </div>
-              <div class="form-group">
                 <input class="form-control" type="email" placeholder="דואר אלקטרוני שלך" required/>
               </div>
-              <div class="form-group">
-                <input class="form-control" type="tel" placeholder="טלפון" />
-              </div>
+              <textarea rows="7" cols="50" class="form-control" placeholder="הודעה"></textarea>
               <div class="btn-block">
                 <input class="btn" type="submit" value="שלח עכשיו" />
               </div>
