--- a/source/stylesheets/contacts.css.scss
+++ b/source/stylesheets/contacts.css.scss
@@ -51,10 +51,11 @@
 
 .envelope-box {
   .btn-block {
-    margin-top: 10px;
+    // margin-top: 10px;
   }
   h3 {
-    margin-bottom: 5px;
+    margin-bottom: 15px;
+    margin-top: 15px;
   }
 }
 
