--- a/source/about.html.erb
+++ b/source/about.html.erb
@@ -24,7 +24,7 @@ title: "שולחן לשניים | אודות"
               <img src="images/about_img_03.png" alt="name" />
             </figure>
             <figcaption class="about-info box-info">
-            <p>מסייעים לכ-26,380 ילדים בישראל </p>
+            <p>מסייעים לכ-39,570 ילדים בישראל </p>
             </figcaption>
           </div>
         </li>
@@ -34,7 +34,9 @@ title: "שולחן לשניים | אודות"
               <img src="images/about_img_02.png" alt="name" />
             </figure>
             <figcaption class="about-info box-info">
-            <p>מחלקים כ-1,600 ארגזי מזון ומעל 40,000 פריטים</p>
+            <p>
+              מחלקים כ-2,400 ארגזי מזון ומעל 60,000 פריטים
+            </p>
             </figcaption>
           </div>
         </li>
@@ -44,7 +46,7 @@ title: "שולחן לשניים | אודות"
               <img src="images/about_img_01.png" alt="name" />
             </figure>
             <figcaption class="about-info box-info">
-            <p>תומכים בכ- 10,552 משפחות הסובלות מאי בטחון תזונתי </p>
+            <p>תומכים בך- 15,828 משפחות הסובלות מאי ביטחון תזונתי</p>
             </figcaption>
           </div>
         </li>
