--- a/source/stylesheets/contacts.css.scss
+++ b/source/stylesheets/contacts.css.scss
@@ -5,6 +5,9 @@
   .sidebar .title-blue {
     margin-bottom: 20px;
   }
+  textarea {
+    resize: none;
+  }
   .contant {
     background-color: #64c0eb;
     position: relative;
