increase video size

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -87,40 +87,6 @@
           </div>
         </div>
       </div>
-      <!-- <div class="participant-block fly-in animated-content">
-        <div class="row">
-          <div class="col-sm-10 col-xs-12">
-            <div class="participant-info-inner-left participant-info">
-              <div class="participant-info-inner">
-                <h4>שם <span>תפקיד</span></h4>
-                <p>Lorem ipsum </p>
-              </div>
-            </div>
-          </div>
-          <div class="col-sm-2 mobile-hidden">
-            <div class="participant-img">
-              <img src="images/participant_02.png" alt="" />
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="participant-block fly-in animated-content">
-        <div class="row">
-          <div class="col-sm-2 mobile-hidden">
-            <div class="participant-img">
-              <img src="images/participant_03.png" alt="" />
-            </div>
-          </div>
-          <div class="col-sm-10 col-xs-12">
-            <div class="participant-info-inner-right participant-info">
-              <div class="participant-info-inner">
-                <h4>שם <span>תפקיד</span></h4>
-                <p>Lorem ipsum </p>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div> -->
     </div>
   </div>
   <!-- /participants -->
@@ -169,7 +135,9 @@
 <div class="modal fade" id="video-modal" role="dialog">
   <div class="modal-dialog">
     <div class="modal-content">
-      <iframe id="iframe" width="560" height="315" src="https://www.youtube.com/embed/HieorPee6KM" frameborder="0" allowfullscreen></iframe>
+      <div class="video-container">
+        <iframe id="iframe" src="https://www.youtube.com/embed/HieorPee6KM" frameborder="0" allowfullscreen></iframe>
+      </div>
     </div>
   </div>
 </div>
